--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 	Hello World
+	<div sec:authorize="isAuthenticated()">
+		<form th:action="@{logout}" method="POST">
+			<button type="submit">logout</button>
+		</form>
+	</div>
 </body>
 </html>
