--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,5 +10,8 @@
 		Password : <input type="password" name="password"/>
 		<input type="submit" value="Login" />
 	</form>
+	<a href="/join">
+		<button>join</button>
+	</a>
 </body>
 </html>
